# rime-ice

./: .gitignore  custom_phrase.txt  default.custom.yaml  default.yaml  rime.lua  rime_ice.dict.yaml  rime_ice.schema.yaml  squirrel.custom.yaml  weasel.custom.yaml
cn_dicts/: ext_ext.dict.yaml  sogou.dict.yaml
cn_dicts_freq/: 41448.dict.yaml  8105.dict.yaml  ext.dict.yaml  ext_ext.dict.yaml  moegirl.dict.yaml  others.dict.yaml  sogou.dict.yaml
en_dicts/: en.dict.yaml
ext_dicts/: sogou_ai.dict.yaml  sogou_beijing.dict.yaml  sogou_chengyusuyu.dict.yaml  sogou_kaifadashen.dict.yaml  sogou_math.dict.yaml  sogou_movie.dict.yaml
lua/: date_translator.lua
others/script/: go.sh
others/script/cpp/: CMakeLists.txt  README.md  go.sh
others/script/cpp/app/: CMakeLists.txt  main.cc  main2.cc
others/script/cpp/cmake/: CompilerSettings.cmake  ProjectJsonCpp.cmake
others/script/cpp/include/: processor.h  utils.h
others/script/cpp/src/: CMakeLists.txt  processor.cc  utils.cc
others/script/python/: config.toml  download_sogou.py  frequency.py  personal.py  prepro.py  prepro2.py  scel2txt.py
others/script/python/common/: header.py  io_utils.py
